Fix header z-index

--- a/eat-the-world/src/Home/Search.scss
+++ b/eat-the-world/src/Home/Search.scss
@@ -10,6 +10,7 @@
 
   &__header {
     text-shadow: 0 0 10px rgba(141, 40, 40, 0.4);
+    z-index: 2;
   }
 }
 
